Fixed bch cars piling up if tx come too close together and RNG puts them in same lane Started work on block found notifications

--- a/style.css
+++ b/style.css
@@ -539,6 +539,24 @@ span.divider {
   float: left;
   margin-right: 1%;
 }
+
+
+#confirmed-notify {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  z-index: 100;
+  display: none;
+}
+
+.confirmed-text{
+  position:relative;
+  top: -50%;
+  left:-50%;
+  text-align: center;
+  background: #149347;
+}
+
 @media only screen and (max-width:767px) {
   .title {
     width: 170px;
